tests/baselines/reference/emptyTypeArgumentListWithNew.errors.txt
tests/cases/compiler/emptyTypeArgumentListWithNew.ts(2,8): error TS1099: Type argument list cannot be empty.


==== tests/cases/compiler/emptyTypeArgumentListWithNew.ts (1 errors) ====
    class foo<T> { }
    new foo<>();
           ~~
!!! error TS1099: Type argument list cannot be empty.